# AdvancedTopics

./: .gitignore
AT_EX1/: .cproject  .gitignore  .project  Definitions.h  GameBoard.cpp  GameBoard.h  GameBoardUnitTest.cpp  GameBoardUnitTest.h  GamePlayed.cpp  GamePlayed.h  Move.cpp  Move.h  MoveUnitTest.cpp  MoveUnitTest.h  ParseBoardUnitTest.cpp  ParseFile.h  PlayerPieces.cpp  PlayerPieces.h  Position.h  README.md  Testing_ATP_HW1.py  ex1Classes.txt  ex1q.txt  game_board.cpp  game_board.h  main.cpp  main_tests.cpp  main_tests.h  makefile  parse_board.cpp  parse_board.h  player1.rps_board
AT_EX2/: .gitignore  AutoPlayerAlgoUnitTest.cpp  AutoPlayerAlgorithm.cpp  AutoPlayerAlgorithm.h  AutoPlayerFile_1.txt  AutoPlayerFile_2.txt  Board.h  Definitions.h  FightInfo.h  FilePlayerAlgorithm.cpp  FilePlayerAlgorithm.h  GameBoard.cpp  GameBoard.h  GameBoardUnitTest.cpp  GameBoardUnitTest.h  GameFightInfo.h  GameJokerChanged.cpp  GameJokerChanged.h  GameManager.cpp  GameManager.h  GameMove.cpp  GameMove.h  GamePoint.h  InterfaceFightInfo.h  InterfaceJokerChange.h  InterfaceMove.h  InterfacePiecePosition.h  InterfacePoint.h  JokerChange.h  Move.h  OurJokerChange.h  OurMove.h  OurPiecePosition.h  OurPoint.h  OurfightInfo.h  PiecePosition.h  PlayerAlgorithm.h  PlayerPieces.cpp  PlayerPieces.h  Point.h  (+6 more)
AT_EX3/: GameMove.cpp  (+15 more)
AT_EX3/submissionFiles/ex3_308446624_307941401/: AutoPlayerAlgorithm.cpp  AutoPlayerAlgorithm.h  CMakeLists.txt  GameBoard.cpp  GameJokerChanged.cpp  GameManager.cpp  GameTournamentManager.cpp  GameTournamentManager.h  PlayerPieces.cpp  makefile  students.txt
(+134 files in other folders)
